Split Advanced usage and Win32 backend status out of README into docs/
README had grown to 396 lines with two deep sections that aren't needed
for a first read: the EmbedSocket/EmbedClient advanced API (a quarter of
the file) and the Win32 backend spike status. Moved both to
docs/advanced-usage.md and docs/win32-status.md, leaving README as a
shorter quick-start entry point with links out to each.